# Embedded-C-

C++ Interfacing/Building Tool/: Date.cpp  Date.h  TestDate.cpp  makefile
C++ Interfacing/GPIO_RGB_LED/: .cproject  .project  GPIO_RGB_LED.cfg  GPIO_RGB_LED.ioc  GPIO_RGB_LED.launch
C++ Interfacing/GPIO_RGB_LED/Debug/: GPIO_RGB_LED.hex  GPIO_RGB_LED.list  GPIO_RGB_LED.map  makefile  sources.mk
C++ Practices/Week1 _Prac/Assignment/: grade.cpp  rectangle_area.cpp  vendingMachine.cpp
C++ Practices/Week1 _Prac/Employee/: emp_app.cpp  employee.cpp  employee.h
C++ Practices/Week1 _Prac/Lab/: Cal_namespace.cpp  Calculator.cpp  Quad_eq.cpp  String.cpp  array.cpp  circle_area.cpp  counting.cpp  funptr.cpp  lambdaG3.cpp  lambda_callback.cpp  lambda_lower.cpp  mile_KM.cpp  ptr_dyn.cpp  ref.cpp  ref2.cpp  swap.cpp  vectors.cpp
C++ Practices/Week1_Prac/Assignment/: rectangle_area.cpp  vendingMachine.cpp
C++ Practices/Week1_Prac/Employee/: emp_app.cpp
C++ Practices/Week1_Prac/Lab/: Quad_eq.cpp  array.cpp  lambda_callback.cpp  swap.cpp  vectors.cpp
C++ Practices/Week2 _ Prac/Assignment/: SmallestDiff.cpp  moveToEnd.cpp
C++ Practices/Week2 _ Prac/Composite Design pattern/: Graphic.h
C++ Practices/Week2 _ Prac/Composition pattern/: Book_Class.h  Composition.cpp  Graphic.h  Graphic_app.cpp
C++ Practices/Week2 _ Prac/Containers/: map.cpp  set.cpp  vector.cpp
G8/C++/Session6/header files/: CMakeLists.txt  fillArray.cpp  main  main.cpp  main.hpp
G8/C++/Session6/header files/Build_WSL/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  headerFile
(+193 files in other folders)
